@@ -305,6 +305,33 @@ namespace ProcessHacker
                 args, successAction, Win32.ShowWindowType.Show, hWnd);
         }
 
+        public static int StartProcessHackerAdminWait(string args, IntPtr hWnd, int timeout)
+        {
+            Win32.SHELLEXECUTEINFO info = new Win32.SHELLEXECUTEINFO();
+
+            info.cbSize = System.Runtime.InteropServices.Marshal.SizeOf(typeof(Win32.SHELLEXECUTEINFO));
+            info.lpFile = Win32.ProcessHandle.FromHandle(Program.CurrentProcess).GetMainModule().FileName;
+            info.nShow = Win32.ShowWindowType.Show;
+            info.fMask = 0x40; // SEE_MASK_NOCLOSEPROCESS
+            info.lpVerb = "runas";
+            info.lpParameters = args;
+            info.hWnd = hWnd;
+
+            if (Win32.ShellExecuteEx(ref info))
+            {
+                int result = Win32.WaitForSingleObject(info.hProcess, timeout);
+
+                Win32.CloseHandle(info.hProcess);
+
+                return result;
+            }
+            else
+            {
+                // An error occured - the user probably canceled the elevation dialog.
+                return Win32.WAIT_ABANDONED;
+            }
+        }
+
         public static void StartProgramAdmin(string program, string args, 
             MethodInvoker successAction, Win32.ShowWindowType showType, IntPtr hWnd)
         {
